--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Importing the dataset\n",
@@ -35,9 +35,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "X = dataset.iloc[:, [3, 4]].values\n",
+    "y = dataset.iloc[:, 3].values"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "# Splitting the dataset into the Training set and Test set\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# Feature Scaling\n",
+    "\"\"\"from sklearn.preprocessing import StandardScaler\n",
+    "sc_X = StandardScaler()\n",
+    "X_train = sc_X.fit_transform(X_train)\n",
+    "X_test = sc_X.transform(X_test)\n",
+    "sc_y = StandardScaler()\n",
+    "y_train = sc_y.fit_transform(y_train)\"\"\""
+   ],
    "metadata": {
     "collapsed": false
    }
