--- a/main.ipynb
+++ b/main.ipynb
@@ -216,6 +216,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Io toglierei product_category_name, product_name_length e product_description_length (non so se altro)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "outputs": [
@@ -246,6 +255,15 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This evaluates the correlation only among numerical variables"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
