--- a/main.ipynb
+++ b/main.ipynb
@@ -872,8 +872,7 @@
     "score_dataframe.insert(1,\"recency_score\",\" \")\n",
     "score_dataframe.insert(2,\"frequency_score\",\" \")\n",
     "score_dataframe.insert(3,\"monetary_score\",\" \")\n",
-    "score_dataframe.insert(4,\"rfm_score\",\" \")\n",
-    "score_dataframe"
+    "score_dataframe.insert(4,\"rfm_score\",\" \")"
    ],
    "metadata": {
     "collapsed": false,
@@ -923,7 +922,6 @@
     }
    ],
    "source": [
-    "\n",
     "d1 = datetime.date(2018 , 3 , 14)\n",
     "d2= datetime.date(2018 , 5 , 26)\n",
     "d3= datetime.date(2018 , 8 , 7)\n",
