--- a/main.ipynb
+++ b/main.ipynb
@@ -1175,6 +1175,153 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### KMEANS"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# K-Means Clustering\n",
+    "\n",
+    "# Importing the libraries\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Importing the dataset\n",
+    "dataset = pd.read_csv('Mall_Customers.csv')\n",
+    "X = dataset.iloc[:, [3, 4]].values\n",
+    "# y = dataset.iloc[:, 3].values\n",
+    "\n",
+    "# Splitting the dataset into the Training set and Test set\n",
+    "\"\"\"from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)\"\"\"\n",
+    "\n",
+    "# Feature Scaling\n",
+    "\"\"\"from sklearn.preprocessing import StandardScaler\n",
+    "sc_X = StandardScaler()\n",
+    "X_train = sc_X.fit_transform(X_train)\n",
+    "X_test = sc_X.transform(X_test)\n",
+    "sc_y = StandardScaler()\n",
+    "y_train = sc_y.fit_transform(y_train)\"\"\"\n",
+    "\n",
+    "# Using the elbow method to find the optimal number of clusters\n",
+    "from sklearn.cluster import KMeans\n",
+    "wcss = []\n",
+    "for i in range(1, 11):\n",
+    "    kmeans = KMeans(n_clusters = i, init = 'k-means++', random_state = 42)\n",
+    "    kmeans.fit(X)\n",
+    "    wcss.append(kmeans.inertia_)\n",
+    "plt.plot(range(1, 11), wcss)\n",
+    "plt.title('The Elbow Method')\n",
+    "plt.xlabel('Number of clusters')\n",
+    "plt.ylabel('WCSS')\n",
+    "plt.show()\n",
+    "\n",
+    "# Fitting K-Means to the dataset\n",
+    "kmeans = KMeans(n_clusters = 5, init = 'k-means++', random_state = 42)\n",
+    "y_kmeans = kmeans.fit_predict(X)\n",
+    "\n",
+    "# Visualising the clusters\n",
+    "plt.scatter(X[y_kmeans == 0, 0], X[y_kmeans == 0, 1], s = 100, c = 'red', label = 'Cluster 1')\n",
+    "plt.scatter(X[y_kmeans == 1, 0], X[y_kmeans == 1, 1], s = 100, c = 'blue', label = 'Cluster 2')\n",
+    "plt.scatter(X[y_kmeans == 2, 0], X[y_kmeans == 2, 1], s = 100, c = 'green', label = 'Cluster 3')\n",
+    "plt.scatter(X[y_kmeans == 3, 0], X[y_kmeans == 3, 1], s = 100, c = 'cyan', label = 'Cluster 4')\n",
+    "plt.scatter(X[y_kmeans == 4, 0], X[y_kmeans == 4, 1], s = 100, c = 'magenta', label = 'Cluster 5')\n",
+    "#plt.scatter(X[y_kmeans == 5, 0], X[y_kmeans == 5, 1], s = 100, c = 'black', label = 'Cluster 6')\n",
+    "#plt.scatter(X[y_kmeans == 6, 0], X[y_kmeans == 6, 1], s = 100, c = 'orange', label = 'Cluster 7')\n",
+    "plt.scatter(kmeans.cluster_centers_[:, 0], kmeans.cluster_centers_[:, 1], s = 300, c = 'yellow', label = 'Centroids')\n",
+    "plt.title('Clusters of customers')\n",
+    "plt.xlabel('Annual Income (k$)')\n",
+    "plt.ylabel('Spending Score (1-100)')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### HIERARCHICAL CLUSTERING"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Hierarchical Clustering\n",
+    "\n",
+    "# Importing the libraries\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Importing the dataset\n",
+    "dataset = pd.read_csv('Mall_Customers.csv')\n",
+    "X = dataset.iloc[:, [3, 4]].values\n",
+    "# y = dataset.iloc[:, 3].values\n",
+    "\n",
+    "# Splitting the dataset into the Training set and Test set\n",
+    "\"\"\"from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)\"\"\"\n",
+    "\n",
+    "# Feature Scaling\n",
+    "\"\"\"from sklearn.preprocessing import StandardScaler\n",
+    "sc_X = StandardScaler()\n",
+    "X_train = sc_X.fit_transform(X_train)\n",
+    "X_test = sc_X.transform(X_test)\n",
+    "sc_y = StandardScaler()\n",
+    "y_train = sc_y.fit_transform(y_train)\"\"\"\n",
+    "\n",
+    "# Using the dendrogram to find the optimal number of clusters\n",
+    "import scipy.cluster.hierarchy as sch\n",
+    "dendrogram = sch.dendrogram(sch.linkage(X, method = 'ward'))\n",
+    "# Ward's method: distance between two clusters A and B is how much the sum of squares will increase when we merge them\n",
+    "# single for min distance\n",
+    "# complete for max distance\n",
+    "# average for centroid distance\n",
+    "plt.title('Dendrogram')\n",
+    "plt.xlabel('Customers')\n",
+    "plt.ylabel('Euclidean distances')\n",
+    "plt.show()\n",
+    "\n",
+    "# Fitting Hierarchical Clustering to the dataset\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "hc = AgglomerativeClustering(n_clusters = 5, affinity = 'euclidean', linkage = 'ward')\n",
+    "y_hc = hc.fit_predict(X)\n",
+    "\n",
+    "# Visualising the clusters\n",
+    "plt.scatter(X[y_hc == 0, 0], X[y_hc == 0, 1], s = 100, c = 'red', label = 'Cluster 1')\n",
+    "plt.scatter(X[y_hc == 1, 0], X[y_hc == 1, 1], s = 100, c = 'blue', label = 'Cluster 2')\n",
+    "plt.scatter(X[y_hc == 2, 0], X[y_hc == 2, 1], s = 100, c = 'green', label = 'Cluster 3')\n",
+    "plt.scatter(X[y_hc == 3, 0], X[y_hc == 3, 1], s = 100, c = 'cyan', label = 'Cluster 4')\n",
+    "plt.scatter(X[y_hc == 4, 0], X[y_hc == 4, 1], s = 100, c = 'magenta', label = 'Cluster 5')\n",
+    "#plt.scatter(X[y_hc == 5, 0], X[y_hc == 5, 1], s = 100, c = 'black', label = 'Cluster 6')\n",
+    "#plt.scatter(X[y_hc == 6, 0], X[y_hc == 6, 1], s = 100, c = 'orange', label = 'Cluster 7')\n",
+    "plt.title('Clusters of customers')\n",
+    "plt.xlabel('Annual Income (k$)')\n",
+    "plt.ylabel('Spending Score (1-100)')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
