--- a/main.ipynb
+++ b/main.ipynb
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "outputs": [
     {
      "data": {
@@ -1008,7 +1008,7 @@
      "data": {
       "text/plain": "array([0, 0, 0, ..., 0, 0, 0], dtype=int32)"
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1032,7 @@
     "plt.ylabel('WCSS')\n",
     "plt.show()\n",
     "\n",
-    "kmeans = KMeans(n_clusters = 3, init = 'k-means++', random_state = 42)\n",
+    "kmeans = KMeans(n_clusters = 4, init = 'k-means++', random_state = 42)\n",
     "y_kmeans = kmeans.fit_predict(X)\n",
     "\n",
     "y_kmeans"
@@ -1087,6 +1087,38 @@
     "plt.ylabel('Spending Score (1-100)')\n",
     "plt.legend()\n",
     "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Silhouette Score: 0.817\n",
+      "Calinski Harabasz Score: 19890.256\n",
+      "Davies Bouldin Score: 0.468\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import silhouette_score\n",
+    "from sklearn.metrics import davies_bouldin_score\n",
+    "from sklearn.metrics import calinski_harabasz_score\n",
+    "\n",
+    "\n",
+    "score_kemans_s = silhouette_score(X, kmeans.labels_, metric='euclidean')\n",
+    "score_kemans_c = calinski_harabasz_score(X, kmeans.labels_)\n",
+    "score_kemans_d = davies_bouldin_score(X, y_kmeans)\n",
+    "\n",
+    "print('Silhouette Score: %.3f' % score_kemans_s)\n",
+    "print('Calinski Harabasz Score: %.3f' % score_kemans_c)\n",
+    "print('Davies Bouldin Score: %.3f' % score_kemans_d)"
    ],
    "metadata": {
     "collapsed": false
