--- a/main.ipynb
+++ b/main.ipynb
@@ -1517,24 +1517,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "             Recency                                                        \n               count       mean        std   min    25%    50%    75%    max\nClusterLabel                                                                \n0               43.0  91.162791  37.003172  15.0  71.50   96.0  115.0  182.0\n1             4171.0  30.756174  20.040146   0.0  17.00   27.0   39.0  148.0\n2              342.0  74.877193  41.026522   2.0  35.25   78.5  111.0  158.0\n3             6691.0  99.534898  29.905978  39.0  76.00  104.0  121.0  482.0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead tr th {\n        text-align: left;\n    }\n\n    .dataframe thead tr:last-of-type th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr>\n      <th></th>\n      <th colspan=\"8\" halign=\"left\">Recency</th>\n    </tr>\n    <tr>\n      <th></th>\n      <th>count</th>\n      <th>mean</th>\n      <th>std</th>\n      <th>min</th>\n      <th>25%</th>\n      <th>50%</th>\n      <th>75%</th>\n      <th>max</th>\n    </tr>\n    <tr>\n      <th>ClusterLabel</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>43.0</td>\n      <td>91.162791</td>\n      <td>37.003172</td>\n      <td>15.0</td>\n      <td>71.50</td>\n      <td>96.0</td>\n      <td>115.0</td>\n      <td>182.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4171.0</td>\n      <td>30.756174</td>\n      <td>20.040146</td>\n      <td>0.0</td>\n      <td>17.00</td>\n      <td>27.0</td>\n      <td>39.0</td>\n      <td>148.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>342.0</td>\n      <td>74.877193</td>\n      <td>41.026522</td>\n      <td>2.0</td>\n      <td>35.25</td>\n      <td>78.5</td>\n      <td>111.0</td>\n      <td>158.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>6691.0</td>\n      <td>99.534898</td>\n      <td>29.905978</td>\n      <td>39.0</td>\n      <td>76.00</td>\n      <td>104.0</td>\n      <td>121.0</td>\n      <td>482.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 202,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "data = X.assign(ClusterLabel = birch.labels_)\n",
-    "x_r=data.groupby(\"ClusterLabel\")[[\"Recency\"]].describe()\n",
-    "x_r\n",
-    "\n",
-    "#result = df_result.groupby(\"ClusterLabel\").agg({\"Age\":\"mean\", \"Income\":\"median\", \"TotalAmountSpent\":\"median\"}).round()"
+    "plt.figure(figsize=(15,6))\n",
+    "sns.barplot(x='customer_state', y='count', hue='payment_type', data=state_payment_df)\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -1545,20 +1534,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 207,
    "outputs": [
     {
      "data": {
-      "text/plain": "             Frequency                                              \n                 count      mean       std  min  25%  50%  75%   max\nClusterLabel                                                        \n0                 43.0  5.348837  2.733250  1.0  4.0  5.0  6.0  13.0\n1               4171.0  1.204507  0.408705  1.0  1.0  1.0  1.0   3.0\n2                342.0  3.774854  1.153426  3.0  3.0  3.0  4.0   9.0\n3               6691.0  1.072037  0.258569  1.0  1.0  1.0  1.0   2.0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead tr th {\n        text-align: left;\n    }\n\n    .dataframe thead tr:last-of-type th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr>\n      <th></th>\n      <th colspan=\"8\" halign=\"left\">Frequency</th>\n    </tr>\n    <tr>\n      <th></th>\n      <th>count</th>\n      <th>mean</th>\n      <th>std</th>\n      <th>min</th>\n      <th>25%</th>\n      <th>50%</th>\n      <th>75%</th>\n      <th>max</th>\n    </tr>\n    <tr>\n      <th>ClusterLabel</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>43.0</td>\n      <td>5.348837</td>\n      <td>2.733250</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>5.0</td>\n      <td>6.0</td>\n      <td>13.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4171.0</td>\n      <td>1.204507</td>\n      <td>0.408705</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>342.0</td>\n      <td>3.774854</td>\n      <td>1.153426</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>4.0</td>\n      <td>9.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>6691.0</td>\n      <td>1.072037</td>\n      <td>0.258569</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>2.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "              size of clusters       mean        std   min    25%  median  \\\nClusterLabel                                                                \n0                         43.0  91.162791  37.003172  15.0  71.50    96.0   \n1                       4171.0  30.756174  20.040146   0.0  17.00    27.0   \n2                        342.0  74.877193  41.026522   2.0  35.25    78.5   \n3                       6691.0  99.534898  29.905978  39.0  76.00   104.0   \n\n                75%    max  \nClusterLabel                \n0             115.0  182.0  \n1              39.0  148.0  \n2             111.0  158.0  \n3             121.0  482.0  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>size of clusters</th>\n      <th>mean</th>\n      <th>std</th>\n      <th>min</th>\n      <th>25%</th>\n      <th>median</th>\n      <th>75%</th>\n      <th>max</th>\n    </tr>\n    <tr>\n      <th>ClusterLabel</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>43.0</td>\n      <td>91.162791</td>\n      <td>37.003172</td>\n      <td>15.0</td>\n      <td>71.50</td>\n      <td>96.0</td>\n      <td>115.0</td>\n      <td>182.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4171.0</td>\n      <td>30.756174</td>\n      <td>20.040146</td>\n      <td>0.0</td>\n      <td>17.00</td>\n      <td>27.0</td>\n      <td>39.0</td>\n      <td>148.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>342.0</td>\n      <td>74.877193</td>\n      <td>41.026522</td>\n      <td>2.0</td>\n      <td>35.25</td>\n      <td>78.5</td>\n      <td>111.0</td>\n      <td>158.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>6691.0</td>\n      <td>99.534898</td>\n      <td>29.905978</td>\n      <td>39.0</td>\n      <td>76.00</td>\n      <td>104.0</td>\n      <td>121.0</td>\n      <td>482.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 201,
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = X.assign(ClusterLabel = birch.labels_)\n",
+    "x_r=data.groupby(\"ClusterLabel\")[[\"Recency\"]].describe()\n",
+    "x_r.columns=['size of clusters','mean', 'std','min', '25%','median','75%','max']\n",
+    "x_r"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "              size of clusters      mean       std  min  25%  median  75%  \\\nClusterLabel                                                                \n0                         43.0  5.348837  2.733250  1.0  4.0     5.0  6.0   \n1                       4171.0  1.204507  0.408705  1.0  1.0     1.0  1.0   \n2                        342.0  3.774854  1.153426  3.0  3.0     3.0  4.0   \n3                       6691.0  1.072037  0.258569  1.0  1.0     1.0  1.0   \n\n               max  \nClusterLabel        \n0             13.0  \n1              3.0  \n2              9.0  \n3              2.0  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>size of clusters</th>\n      <th>mean</th>\n      <th>std</th>\n      <th>min</th>\n      <th>25%</th>\n      <th>median</th>\n      <th>75%</th>\n      <th>max</th>\n    </tr>\n    <tr>\n      <th>ClusterLabel</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>43.0</td>\n      <td>5.348837</td>\n      <td>2.733250</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>5.0</td>\n      <td>6.0</td>\n      <td>13.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4171.0</td>\n      <td>1.204507</td>\n      <td>0.408705</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>342.0</td>\n      <td>3.774854</td>\n      <td>1.153426</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>4.0</td>\n      <td>9.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>6691.0</td>\n      <td>1.072037</td>\n      <td>0.258569</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>2.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_f=data.groupby(\"ClusterLabel\")[[\"Frequency\"]].describe()\n",
+    "x_f.columns=['size of clusters','mean', 'std','min', '25%','median','75%','max']\n",
     "x_f"
    ],
    "metadata": {
@@ -1570,20 +1587,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 206,
    "outputs": [
     {
      "data": {
-      "text/plain": "             Monetary Value                                               \\\n                      count         mean          std      min       25%   \nClusterLabel                                                               \n0                      43.0  6991.476047  5171.210202  2928.24  4070.160   \n1                    4171.0   228.052124   348.856006    10.71    67.175   \n2                     342.0   844.448480   645.340697    12.91   396.000   \n3                    6691.0   169.949661   184.969160    14.38    65.220   \n\n                                             \n                   50%        75%       max  \nClusterLabel                                 \n0             5398.750  7180.6800  29099.52  \n1              122.840   219.4800   3209.72  \n2              694.885  1131.1425   4080.58  \n3              113.960   192.2700   1589.57  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead tr th {\n        text-align: left;\n    }\n\n    .dataframe thead tr:last-of-type th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr>\n      <th></th>\n      <th colspan=\"8\" halign=\"left\">Monetary Value</th>\n    </tr>\n    <tr>\n      <th></th>\n      <th>count</th>\n      <th>mean</th>\n      <th>std</th>\n      <th>min</th>\n      <th>25%</th>\n      <th>50%</th>\n      <th>75%</th>\n      <th>max</th>\n    </tr>\n    <tr>\n      <th>ClusterLabel</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>43.0</td>\n      <td>6991.476047</td>\n      <td>5171.210202</td>\n      <td>2928.24</td>\n      <td>4070.160</td>\n      <td>5398.750</td>\n      <td>7180.6800</td>\n      <td>29099.52</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4171.0</td>\n      <td>228.052124</td>\n      <td>348.856006</td>\n      <td>10.71</td>\n      <td>67.175</td>\n      <td>122.840</td>\n      <td>219.4800</td>\n      <td>3209.72</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>342.0</td>\n      <td>844.448480</td>\n      <td>645.340697</td>\n      <td>12.91</td>\n      <td>396.000</td>\n      <td>694.885</td>\n      <td>1131.1425</td>\n      <td>4080.58</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>6691.0</td>\n      <td>169.949661</td>\n      <td>184.969160</td>\n      <td>14.38</td>\n      <td>65.220</td>\n      <td>113.960</td>\n      <td>192.2700</td>\n      <td>1589.57</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "              size of clusters         mean          std      min       25%  \\\nClusterLabel                                                                  \n0                         43.0  6991.476047  5171.210202  2928.24  4070.160   \n1                       4171.0   228.052124   348.856006    10.71    67.175   \n2                        342.0   844.448480   645.340697    12.91   396.000   \n3                       6691.0   169.949661   184.969160    14.38    65.220   \n\n                median        75%       max  \nClusterLabel                                 \n0             5398.750  7180.6800  29099.52  \n1              122.840   219.4800   3209.72  \n2              694.885  1131.1425   4080.58  \n3              113.960   192.2700   1589.57  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>size of clusters</th>\n      <th>mean</th>\n      <th>std</th>\n      <th>min</th>\n      <th>25%</th>\n      <th>median</th>\n      <th>75%</th>\n      <th>max</th>\n    </tr>\n    <tr>\n      <th>ClusterLabel</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>43.0</td>\n      <td>6991.476047</td>\n      <td>5171.210202</td>\n      <td>2928.24</td>\n      <td>4070.160</td>\n      <td>5398.750</td>\n      <td>7180.6800</td>\n      <td>29099.52</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4171.0</td>\n      <td>228.052124</td>\n      <td>348.856006</td>\n      <td>10.71</td>\n      <td>67.175</td>\n      <td>122.840</td>\n      <td>219.4800</td>\n      <td>3209.72</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>342.0</td>\n      <td>844.448480</td>\n      <td>645.340697</td>\n      <td>12.91</td>\n      <td>396.000</td>\n      <td>694.885</td>\n      <td>1131.1425</td>\n      <td>4080.58</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>6691.0</td>\n      <td>169.949661</td>\n      <td>184.969160</td>\n      <td>14.38</td>\n      <td>65.220</td>\n      <td>113.960</td>\n      <td>192.2700</td>\n      <td>1589.57</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 200,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_m=data.groupby(\"ClusterLabel\")[[\"Monetary Value\"]].describe()\n",
+    "x_m.columns=['size of clusters','mean', 'std','min', '25%','median','75%','max']\n",
     "x_m"
    ],
    "metadata": {
