--- a/main.ipynb
+++ b/main.ipynb
@@ -1462,19 +1462,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "      Algorithm  Silhouette  Calinski Harabasz  Davies Bouldin\n0        Kmeans    0.491855        6521.885623        0.721628\n1  Hierarchical    0.485409        5533.921146        0.871102\n2           GMM    0.249123        2075.395371        1.734123\n3         Birch    0.441750        5095.204130        0.880717",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Algorithm</th>\n      <th>Silhouette</th>\n      <th>Calinski Harabasz</th>\n      <th>Davies Bouldin</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Kmeans</td>\n      <td>0.491855</td>\n      <td>6521.885623</td>\n      <td>0.721628</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Hierarchical</td>\n      <td>0.485409</td>\n      <td>5533.921146</td>\n      <td>0.871102</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>GMM</td>\n      <td>0.249123</td>\n      <td>2075.395371</td>\n      <td>1.734123</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Birch</td>\n      <td>0.441750</td>\n      <td>5095.204130</td>\n      <td>0.880717</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 264,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
+    "\n",
     "#comparing the 3 clustering algorithms based on the metrics\n",
     "\n",
     "metrics={'Algorithm':['Kmeans', 'Hierarchical', 'GMM', 'Birch'],'Silhouette':[score_kmeans_s,score_hc_s, score_gmm_s, score_birch_s], 'Calinski Harabasz': [score_kmeans_c,score_hc_c, score_gmm_c, score_birch_c],'Davies Bouldin': [score_kmeans_d,score_hc_d, score_gmm_d, score_birch_d]}\n",
@@ -1484,7 +1475,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -1766,7 +1758,7 @@
     "x_m4.columns=['size of clusters','mean', 'std','min', '25%','median','75%','max']\n",
     "display(x_m3)\n",
     "display(x_f3)\n",
-    "display(x_r3)"
+    "display(x_r3)\n"
    ],
    "metadata": {
     "collapsed": false,
