--- a/main.ipynb
+++ b/main.ipynb
@@ -1758,7 +1758,7 @@
     "x_m4.columns=['size of clusters','mean', 'std','min', '25%','median','75%','max']\n",
     "display(x_m3)\n",
     "display(x_f3)\n",
-    "display(x_r3)\n"
+    "display(x_r3)"
    ],
    "metadata": {
     "collapsed": false,
