--- a/main.ipynb
+++ b/main.ipynb
@@ -22,8 +22,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import datetime"
+    "import seaborn as sns"
    ]
   },
   {
