--- a/main.ipynb
+++ b/main.ipynb
@@ -1060,7 +1060,7 @@
     "From scatter plots we can visualize the 4 clusters that we obtained, notice that we also ran the algorithm with k value equal to 5, but the outcome wasn't suitable.\n",
     "Analyzing the 2D plot we realized it was difficult to make considerations on, due to the fact that it does not take in consideration the frequency variable. To solve this problem we plotted a 3D graph, that allows us to interpret the clusters based on the RFM values.\n",
     "The first (yellow) cluster represents probably inactive customers that have made a few purchases a long time ago.\n",
-    "The second one (blue) contains active customers that have made purchases many times, yet they still have a relatively low monetary value.\n",
+    "The second one (blue) contains active customers (low recency) that have made purchases many times, yet they still have a relatively low monetary value.\n",
     "The third cluster (green) contains new customers that in fact have not spent much,have a low frequency but a have made purchases recently.\n",
     "Finally, the fourth cluster (cyan) is quite similar to the blue one, besides the fact that their monetary value is pretty high. This implies that they are probably usual customer that are still active.\n"
    ],
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "As the plot shows, the clusters created are again really similar to the ones we obtained in thefirst two cluresting methods, maybe we notice that the frequency of the customers of the second and third clusters is slightly higher compared to the ame clusters obtained previously."
+    "As the plot shows, the clusters created are again really similar to the ones we obtained in the first two cluresting methods, maybe we notice that the frequency of the customers of the second and third clusters is slightly higher compared to the ame clusters obtained previously."
    ],
    "metadata": {
     "collapsed": false,
@@ -1432,6 +1432,19 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "To evaluate the methods and pick the best segmentation we computed some metrics that indicate the accuracy of the clustering.\n",
+    "We also stored them in a dataframe that makes it easier to plot them."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 334,
    "outputs": [
@@ -1447,13 +1460,25 @@
    ],
    "source": [
     "#comparing the 3 clustering algorithms based on the metrics\n",
-    "\n",
     "metrics={'Algorithm':['Kmeans', 'Hierarchical', 'GMM', 'Birch'],'Silhouette':[score_kmeans_s,score_hc_s, score_gmm_s, score_birch_s], 'Calinski Harabasz': [score_kmeans_c,score_hc_c, score_gmm_c, score_birch_c],'Davies Bouldin': [score_kmeans_d,score_hc_d, score_gmm_d, score_birch_d]}\n",
     "metrics_df=pd.DataFrame(metrics)\n",
     "metrics_df"
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "To clearly compare the clustering methods we plotted the different scores.\n",
+    "Firstly we tried to plot a unique graph that includes all the scores for each algorithm performed, but the difference in the range of numbers made it impossible to do it in a normal-sized graph, so we had to separate each score in different plots."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1476,7 +1501,10 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -1526,6 +1554,35 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Looking at the outcome obtained we conclude saying that the best model is clearly Kmeans clustering, as a matter of fact it has the highest Silhouette score (it ranges between 1 and -1, and 1 indicates perfect clustering).\n",
+    "It also has the highest Calinski Harabasz (the higher the score , the better the performances), and the lowest Davies Bouldin (The minimum score is zero,lower values indicate better clustering).\n",
+    "We also confirmed, as we deduced before, that the Gaussian mixture model isn't a suitable for our data, that's probably because we have a big dataset with well-defined data, and low noise, so the kmeans method works better  even if it's simpler.\n",
+    "Moreover The GMM method is less sensitive to outliers."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Above we deduced the characteristics of each cluster just looking at the 3D plots, here we compute some measures to improve our deductions with empirical evidence.\n",
+    "We firstly calculate the size of each cluster obtained, and then we compute some information about the recency ,frequency and monetary value of the customers (that's why the outcome is three different dataframes) of each cluster, that help us generalize their characteristics.\n",
+    "We did the computations for each clustering method used."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 338,
    "outputs": [
@@ -1569,7 +1626,10 @@
     "display(x_r)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
