--- a/main.ipynb
+++ b/main.ipynb
@@ -41,15 +41,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### EDA"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "### EDA\n",
     "Since the dataset contains much information about the customers, it is required to deeply analyze the data before starting to work on it. Below we check some features of our dataset to find if there are any variables that can be ignored because they might be useful for our analysis, and afterwards we check its shape and we compute some useful descriptive statistics."
    ],
    "metadata": {
@@ -372,18 +364,13 @@
    }
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "source": [
-    "From the correlation map above we can see that there is a high correlation between payment_value and the price, while we have  a negative correlation, with order_item_id and the price since order_item_id stands for the number of items for each order, and the price means the price of each item. It is easily understandable from the description that the number of items that we place in an order cannot influence in any way the price of an item. So wand  order_item_id and the freight_value. We can make the same reasoning for order_item_id and freight_value."
+    "From the correlation map above we can see that there is a high correlation between payment_value and the price, while we have  a negative correlation, with order_item_id and the price since order_item_id stands for the number of items for each order, and the price means the price of each item. It is easily understandable from the description that the number of items that we place in an order cannot influence in any way the price of an item. We can make the same reasoning for order_item_id and freight_value."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "execution_count": null,
-   "outputs": []
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -523,7 +510,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### OUTLIERS\n",
+    "### OUTLIERS\n",
     "We want to detect the outliers by visualizing the data with a pairplot and then decide if remove them or not."
    ],
    "metadata": {
@@ -702,23 +689,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### ONE HOT ENCODING"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "### ONE HOT ENCODING\n",
     "Since most of machine learning algorithms cannot work with categorical data directly, it is required to convert the catogorical variables into numbers, to do that we used One-hot encoding, which is a method to quantify categorical data.\n",
     "In particular we used the function get_dummies."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -750,14 +726,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### CALCULATING RFM\n",
+    "### CALCULATING RFM\n",
     "We develop our segmentation using the RFM analysis; RFM stands for Recency, Requency and Monetary value, important metrics that indicate the customer’s behavior."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "execution_count": 1
@@ -765,7 +738,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### Recency value\n",
+    "#### Recency value\n",
     "We started computing the recency which is the number of days since the last purchase of a customer, and stored it in a dataframe which contains the id of each customer, the date of its last purchase and the recency value."
    ],
    "metadata": {
@@ -807,7 +780,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### Frequency value\n",
+    "#### Frequency value\n",
     "The frequency refers to the number of orders made by each customer, again we stored it in a dataframe containing the customer id."
    ],
    "metadata": {
@@ -841,7 +814,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### Monetary value\n",
+    "#### Monetary value\n",
     "The monetary value refers to the total amount spent by each customer throughout the year, that's why we sum the payment value of the various orders for each customer."
    ],
    "metadata": {
@@ -927,7 +900,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### CLUSTERING ALGORITHMS\n",
+    "### CLUSTERING ALGORITHMS\n",
     "\n",
     "Having all the data prepared we decided to implement 4 different clustering algorithms so that we can pick the most suitable segmentation.\n",
     "The algorithms chosen are: Kmeans, Hierarchical, Gaussian Mixture Model and Birch."
@@ -939,8 +912,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### KMEANS\n",
-    "K-means clustering groups similar kinds of datapoints in form of clusters according to the similarity between them. In particular, it uses centroids to determine the various clusters.\n",
+    "#### Kmeans\n",
+    "Kmeans clustering groups similar kinds of datapoints in form of clusters according to the similarity between them. In particular, it uses centroids to determine the various clusters.\n",
     "Firstly we need to pass to the algorithm the k-value, a hyperparameter that indicates the optimal number of clusters.\n",
     "To optimize the algorithm this value must be suitable, we identified it through the elbow method.\n",
     "Notice that we firstly standardized the recency, frequency and monetary value in order to work on uniform values."
@@ -1114,11 +1087,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### HIERARCHICAL CLUSTERING\n",
-    "\n",
-    "Hierarchical clustering groups data based on their  similarities, as we have done before we need to compute the optimal number of clusters, here though we use the dendrogram to find it, which shows the hierarchical relationship between clusters.\n",
-    "\n",
-    "\n"
+    "#### Hierarchical clustering\n",
+    "Hierarchical clustering groups data based on their  similarities, as we have done before we need to compute the optimal number of clusters, here though we use the dendrogram to find it, which shows the hierarchical relationship between clusters."
    ],
    "metadata": {
     "collapsed": false
@@ -1249,7 +1219,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### Gaussian mixture model\n",
+    "#### Gaussian mixture model\n",
     "The Gaussian Mixture Model assumes all data points are generated from a mixture of a finite number of Gaussian distributions with unknown parameters. This algorithm works by assigning each data point to a mixture component based on the likelihood of it belonging to that component therefore Model it to group the data points belonging to a single distribution together.\n"
    ],
    "metadata": {
@@ -1264,21 +1234,14 @@
     "from numpy import unique\n",
     "from numpy import where\n",
     "from sklearn.mixture import GaussianMixture\n",
-    "from matplotlib import pyplot\n",
-    "from sklearn import metrics\n",
+    "\n",
+    "#Gaussian mixture model\n",
     "gmm= GaussianMixture(n_components=4)\n",
-    "# fit the model\n",
-    "gmm.fit(X_scd)\n",
-    "# assign a cluster to each example\n",
-    "y_gmm = gmm.fit_predict(X_scd)\n",
-    "# assign a cluster to each example\n",
-    "#yhat = model.predict(X_scd)\n",
-    "# retrieve unique clusters\n",
-    "clusters = unique(y_gmm)\n",
-    "# create scatter plot for samples from each cluster\n",
-    "for cluster in clusters:\n",
-    " # get row indexes for samples with this cluster\n",
-    " row_ix = where(y_gmm == cluster)"
+    "gmm.fit(X_scd)  # fit the model\n",
+    "y_gmm = gmm.fit_predict(X_scd)  # assign a cluster to each example\n",
+    "clusters = unique(y_gmm)    # retrieve unique clusters\n",
+    "for cluster in clusters:    # create scatter plot for samples from each cluster\n",
+    " row_ix = where(y_gmm == cluster)   # get row indexes for samples with this cluster"
    ],
    "metadata": {
     "collapsed": false
@@ -1354,14 +1317,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### Birch model\n",
+    "#### Birch model\n",
     "Birch (Balanced Iterative Reducing and Clustering using Hierarchies) is a clustering algorithm used to cluster data points into a fixed number of clusters. It involves constructing a tree structure from which identify clusters  assigns each data point to the most relevant cluster, is very useful because its an efficient algorithm that reduces the computational cost ."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1371,14 +1331,11 @@
    "source": [
     "# birch clustering\n",
     "from sklearn.cluster import Birch\n",
-    "# define the model\n",
+    "\n",
     "birch = Birch(threshold=0.01, n_clusters=4)\n",
-    "# fit the model\n",
-    "birch.fit(X_scd)\n",
-    "# assign a cluster to each example\n",
-    "y_birch = birch.predict(X_scd)\n",
-    "# retrieve unique clusters\n",
-    "clusters = unique(y_birch)"
+    "birch.fit(X_scd)    # fit the model\n",
+    "y_birch = birch.predict(X_scd)  # assign a cluster to each example\n",
+    "clusters = unique(y_birch)  # retrieve unique clusters"
    ],
    "metadata": {
     "collapsed": false
